--- a/projectshop/templates/manages/base.html
+++ b/projectshop/templates/manages/base.html
@@ -13,36 +13,8 @@
   <body>
   <head>
 
-    {% if user.is_authenticated %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'products'%}">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout'%}?next={{request.path}}">logout</a>
-          </li>
-        </ul>
-        <span class="navbar-text">
-          User: {{ user.get_username }}
-        </span>
-      </div>
-    </nav>
-    {%else%}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'login'%}?next={{request.path}}">login</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    {% endif %}
+    {% include "manages/_nav.html" %}
+
 
   </head>
     {% block content %}
