--- a/projectshop/templates/manages/product_list.html
+++ b/projectshop/templates/manages/product_list.html
@@ -12,21 +12,23 @@
       <th scope="col">Date</th>
         <th scope="col">Sale!!</th>
         <th scope="col">Price</th>
+        <th scope="col">Link</th>
     </tr>
   </thead>
   <tbody>
     {% for product in products %}
     <tr>
       <th scope="row">{{ product.id }}</th>
-        <td><a href="{{product.id}}">{{ product.name }}</a></td>
+        <td>{{ product.name }}</td>
         <td>{{ product.create_date }}</td>
-        {% if product.sale %}
-        <td>{{ product.sale.discount }} %</td>
-        <td> {{ product.new_price }}$ <s style="padding-left: 20px">{{ product.price }}$</s></td>
+        {% if product.sale.all %}
+        <td>{{ product.get_all_discount }} %</td>
+        <td> {{ product.price }}$ <s style="padding-left: 20px">{{ product.start_price }}$</s></td>
         {% else %}
         <td>Best price!</td>
-        <td>{{ product.price }}$</td>
+        <td>{{ product.start_price }}$</td>
         {% endif %}
+      <td><a href="{{product.id}}">Click here</a></td>
     </tr>
   {% endfor %}
   </tbody>
@@ -37,6 +39,6 @@
 
 
 {% if is_paginated %}
-    {% include "manages/pagination.html" %}
+    {% include "manages/_pagination.html" %}
 {% endif %}
 {% endblock %}
