work filter & add perms

--- a/projectshop/templates/manages/_nav.html
+++ b/projectshop/templates/manages/_nav.html
@@ -15,7 +15,7 @@
           <a class="nav-link" href="{% url 'create_product'%}">Crete product</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'create_order'%}">Crete oreder</a>
+          <a class="nav-link" href="{% url 'create_order'%}">Crete order</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout'%}?next={{ request.path }}">logout</a>
