--- a/projectshop/templates/manages/index.html
+++ b/projectshop/templates/manages/index.html
@@ -1,4 +1,4 @@
-{% extends 'manages/base.html' %}
+{% extends 'manages/base_open.html' %}
 {% block title %} Shop  {% endblock %}
 
 {% block content %}
