--- a/projectshop/templates/manages/product_detail.html
+++ b/projectshop/templates/manages/product_detail.html
@@ -1,13 +1,9 @@
-{% extends 'manages/base.html' %}
+{% extends 'manages/base_open.html' %}
 {% block title %} Detail product  {% endblock %}
 
 {% block content %}
-
-
-
-
   <div class="card text-center">
-    {% if product.sale %}
+    {% if product.sale.all %}
     <div class="card-header">
       Sale!!
     </div>
@@ -18,8 +14,8 @@
     {% endif %}
     <div class="card-body">
       <h5 class="card-title">Product: {{product.name}}</h5>
-      {% if product.sale %}
-      <p class="card-text">Sale in this product: {{ product.sale.discount }} % !! New price: {{ product.price }}$ <br> Last price: {{ product.start_price }}$ </p>
+      {% if product.sale.all %}
+      <p class="card-text">Sale in this product: {{ product.get_all_discount }} % !! New price: {{ product.price }}$ <br> Last price: {{ product.start_price }}$ </p>
       {% else %}
       <p class="card-text">Current price for this product: {{ product.start_price }}$ </p>
       {% endif %}
@@ -30,4 +26,5 @@
       {{product.create_date}}
     </div>
   </div>
+
 {% endblock %}
