--- a/projectshop/templates/manages/product_list.html
+++ b/projectshop/templates/manages/product_list.html
@@ -1,7 +1,8 @@
-{% extends 'manages/base.html' %}
+{% extends 'manages/base_open.html' %}
 {% block title %} Shop  {% endblock %}
 
 {% block content %}
+
   <table class="table">
     <thead class="thead-dark">
       <tr>
