--- a/projectshop/templates/manages/success_order.html
+++ b/projectshop/templates/manages/success_order.html
@@ -1,4 +1,4 @@
-{% extends 'manages/base.html' %}
+{% extends 'manages/base.html.html' %}
 {% block title %} Shop  {% endblock %}
 
 {% block content %}
@@ -9,5 +9,4 @@
   <p>Buy again?</p>
   <a class="btn btn-primary btn-lg" href="{% url 'products'%}" role="button">Check products</a>
 </div>
-
 {% endblock %}
