--- a/projectshop/templates/manages/_pagination.html
+++ b/projectshop/templates/manages/_pagination.html
@@ -1,24 +1,26 @@
+{% load manages_extras %}
+
 <nav aria-label="...">
   <ul class="pagination">
       {% if page_obj.has_previous %}
        <li class="page-item">
-           <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+           <a class="page-link" href="?{% query_transform page=page_obj.previous_page_number %}">Previous</a>
        </li>
       {% endif %}
 {% for i in page_obj.paginator.page_range %}
     {% if page_obj.number == i %}
     <li class="page-item active">
-        <a class="page-link" href="?page={{ i }}">{{ page_obj.number }}</a>
+        <a class="page-link" href="?{% query_transform page=i %}">{{ page_obj.number }}</a>
       </li>
     {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %}
     <li class="page-item">
-        <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+        <a class="page-link" href="?{% query_transform page=i %}">{{ i }}</a>
       </li>
     {% endif %}
 {% endfor %}
     {% if page_obj.has_next %}
     <li class="page-item">
-      <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+      <a class="page-link" href="?{% query_transform page=page_obj.next_page_number %}">Next</a>
     </li>
     {% endif %}
   </ul>
