--- a/projectshop/templates/manages/order_detail.html
+++ b/projectshop/templates/manages/order_detail.html
@@ -2,24 +2,36 @@
 {% block title %} Detail product  {% endblock %}
 
 {% block content %}
-<h1 style="text-align: center; padding: 3rem;">Detail order</h1>
+{% if perms.manages.view_order %}
 
-<div class="container">
-     <div class="row justify-content-md-center">
-        <div class="card" style="width: 38rem; text-align: center;">
-          <div class="card-header">
-            Status sale: {% if order.product.sale %}in Sale{% else %}Not for sale{% endif %}
+  <h1 style="text-align: center; padding: 3rem;">Detail order</h1>
+  <div class="container">
+       <div class="row justify-content-md-center">
+          <div class="card" style="width: 38rem; text-align: center;">
+            <div class="card-header">
+              Status sale: {% if order.product.sale.all %}in Sale{% else %}Not for sale{% endif %}
+            </div>
+            <ul class="list-group list-group-flush" >
+              <li class="list-group-item">Name product: {{order.product.name}}</li>
+                <li class="list-group-item">Status order: {{order.get_status_display}}</li>
+                <li class="list-group-item" >Full price: {{order.product.price}}$</li>
+                <li class="list-group-item" >Client phone: {{order.client_phone_number}}</li>
+                <li class="list-group-item" >Date create order: {{order.date_create_order}}</li>
+                {% if order.date_close_order %}<li class="list-group-item" >Date close order: {{order.date_close_order}}</li>{% endif %}
+                <li class="list-group-item" ><a href="{% url 'order_update' order.pk %}" class="btn btn-outline-warning btn-block">Change?</a></li>
+                {% if order.get_status_display == 'Done' %}
+                <li class="list-group-item" ><a href="{% url 'gen_check' order.pk %}" class="btn btn-outline-success btn-block">Check it!</a></li>
+                {% else %}
+                <h5>This product dont have done!</h5>
+                {% endif %}
+            </ul>
           </div>
-          <ul class="list-group list-group-flush" >
-            <li class="list-group-item">Name product: {{order.product.name}}</li>
-              <li class="list-group-item">Status order: {{order.get_status_display}}</li>
-              <li class="list-group-item" >Full price: {{order.product.price}}$</li>
-              <li class="list-group-item" >Client phone: {{order.client_phone_number}}</li>
-              <li class="list-group-item" ><a href="{% url 'order_update' order.pk %}" class="btn btn-outline-warning btn-block">Change?</a></li>
-              <li class="list-group-item" ><a href="{% url 'gen_check' order.pk %}" class="btn btn-outline-success btn-block">Check it!</a></li>
-          </ul>
-        </div>
-     </div>
-</div>
+       </div>
+  </div>
+
+{% else %}
+  <h1>Dont have perms</h1>
+{% endif %}
+
 
 {% endblock %}
