--- a/projectshop/templates/manages/success_order.html
+++ b/projectshop/templates/manages/success_order.html
@@ -1,4 +1,4 @@
-{% extends 'manages/base.html.html' %}
+{% extends 'manages/base.html' %}
 {% block title %} Shop  {% endblock %}
 
 {% block content %}
