--- a/projectshop/templates/manages/order_list.html
+++ b/projectshop/templates/manages/order_list.html
@@ -25,8 +25,8 @@
                   <th scope="row">{{order.id}}</th>
                   <td>{{ order.product.name }}</td>
                   <td>{{ order.product.price }}$</td>
-                  {% if order.product.sale %}
-                  <td>{{ order.product.sale.discount }} %</td>
+                  {% if order.product.sales.all %}
+                  <td>{{ order.product.get_all_discount }} %</td>
                   {% else %}
                   <td>Not sale</td>
                   {% endif %}
