add test coverage 92% and oth some edit

--- a/projectshop/templates/manages/_nav_filter.html
+++ b/projectshop/templates/manages/_nav_filter.html
@@ -22,7 +22,7 @@
 
         <div class="input-group mb-3">
           <div class="input-group-prepend">
-            <span class="input-group-text">Date start bigger:</span>
+            <span class="input-group-text">Date crete order (больше чем введенная дата):</span>
           </div>
           <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="date_start">
           <div class="input-group-append">
@@ -32,11 +32,11 @@
 
         <div class="input-group mb-3">
           <div class="input-group-prepend">
-            <span class="input-group-text">Date end lower:</span>
+            <span class="input-group-text">Date close order (больше чем введенная дата):</span>
           </div>
           <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="date_end">
           <div class="input-group-append">
-            <span class="input-group-text">Example 31.12.2012</span>
+            <span class="input-group-text">Example 31-12-2012</span>
           </div>
         </div>
         <button type="button" class="btn btn-outline-primary" id="main_button">Send</button>
